Fixed meeting recording is getting cropped up in popup

--- a/src/Components/assets/css/common/misc.css
+++ b/src/Components/assets/css/common/misc.css
@@ -1445,7 +1445,7 @@ input[type=number] {
 } */
 
 .popup .videoContainer {
-    width: 80%;
+    width: auto;
     height: 80%;
     border-radius: 20px;
     overflow: hidden;
@@ -1455,7 +1455,7 @@ input[type=number] {
 .popup .videoContainer video {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 
